<resources>
    <string name="app_name">MyGalleryApp</string>
    <string name="action_share">Share</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="publish_date">Publish Date:</string>
    <string name="author">Author:</string>
    <string name="tag">Tag:</string>
    <string name="unknow">unknow</string>
    <string name="title_activity_main">My Gallery App</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="error_detail_image_position">Can\'t load image detail</string>
    <string name="error_detail_image_empty">Data information is empty</string>
    <string name="error_not_connected">You need to be connected to using the application</string>
</resources>
