<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.feedInstagram.DetailActivity$PlaceholderFragment">


    <LinearLayout
        android:id="@+id/layout_publish"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/publish_date"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_publish"
            android:layout_width="wrap_content"
            android:text="@string/unknow"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/layout_publish"
        android:id="@+id/layout_author"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/author"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_author"
            android:layout_width="wrap_content"
            android:text="@string/unknow"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/layout_author"
        android:id="@+id/layout_tag"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/tag"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_tags"
            android:layout_width="wrap_content"
            android:text="@string/unknow"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <ImageView
        android:id="@+id/imageview_detail"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/layout_tag"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
